test/files/neg/t9684.check
t9684.scala:7: warning: object JavaConversions in package collection is deprecated (since 2.12.0): use JavaConverters
  null.asInstanceOf[java.util.List[Int]] : Buffer[Int]
                   ^
t9684.scala:9: warning: object JavaConversions in package collection is deprecated (since 2.12.0): use JavaConverters
  null.asInstanceOf[Iterable[Int]] : java.util.Collection[Int]
                   ^
error: No warnings can be incurred under -Xfatal-warnings.
two warnings found
one error found
